Created Alien class in alien.py. Added aliens sprite group in AI and drawing of the group in _update_screen method.

--- a/.gitignore
+++ b/.gitignore
@@ -941,3 +941,8 @@ __pycache__/
 /venv/Lib/site-packages/pygame/examples/data/yuv_1.pgm
 /venv/Lib/site-packages/pygame/tests/run_tests__tests/all_ok/zero_tests_test.py
 /venv/Lib/site-packages/pygame/zlib1.dll
+/images/alien.bmp
+/images/cartoon-5181269_1280.png
+/images/spaceship-309153_1280.png
+/images/ufo-1791706_1280.png
+/images/ufo-2624707_1280.png
